err/pybvc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybvc'...
Listing './lib/python3.5/site-packages/pybvc/common'...
Compiling './lib/python3.5/site-packages/pybvc/common/utils.py'...
***   File "./lib/python3.5/site-packages/pybvc/common/utils.py", line 214
    print "%s" % sym,   # <- no newline
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybvc/controller'...
Compiling './lib/python3.5/site-packages/pybvc/controller/controller.py'...
***   File "./lib/python3.5/site-packages/pybvc/controller/controller.py", line 115
    print "Error: " + repr(e)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybvc/controller/notification.py'...
***   File "./lib/python3.5/site-packages/pybvc/controller/notification.py", line 156
    print "\n".strip()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybvc/controller/topology.py'...
***   File "./lib/python3.5/site-packages/pybvc/controller/topology.py", line 164
    print node.get_id()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybvc/netconfdev'...
Listing './lib/python3.5/site-packages/pybvc/netconfdev/vdx'...
Compiling './lib/python3.5/site-packages/pybvc/netconfdev/vdx/nos.py'...
***   File "./lib/python3.5/site-packages/pybvc/netconfdev/vdx/nos.py", line 166
    print k
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybvc/netconfdev/vrouter'...
Compiling './lib/python3.5/site-packages/pybvc/netconfdev/vrouter/vrouter5600.py'...
***   File "./lib/python3.5/site-packages/pybvc/netconfdev/vrouter/vrouter5600.py", line 385
    print k
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pybvc/openflowdev'...
Compiling './lib/python3.5/site-packages/pybvc/openflowdev/ofswitch.py'...
***   File "./lib/python3.5/site-packages/pybvc/openflowdev/ofswitch.py", line 233
    print "Error: " + repr(e)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybvc-1.3.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
